[package]
name = "functional-component-with-props"
version = "0.0.1"
edition = "2021"
description = "A functional component with props in yew."
readme = "README.md"
repository = "https://github.com/wiseaidev/rust-yew-book"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
