[package]
name = "fetching-data-from-an-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.4.0"
serde = { version = "1.0.193", features = ["derive"] }
wasm-bindgen-futures = "0.4.38"
yew = { version = "0.21.0", features = ["csr"] }
